--- a/backend/package.json
+++ b/backend/package.json
@@ -10,16 +10,24 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.651.0",
+    "@aws-sdk/lib-storage": "^3.651.1",
+    "aws-sdk": "^2.1691.0",
+    "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "form-data": "^4.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.1",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.4",
     "otp-generator": "^4.0.1",
+    "path": "^0.12.7",
     "speakeasy": "^2.0.0"
   }
 }
