--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "i18next": "^23.15.1",
+    "i18next-browser-languagedetector": "^8.0.0",
     "lucide-react": "^0.439.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
+    "react-i18next": "^15.0.1",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "recharts": "^2.12.7",
