--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "recharts": "^2.12.7",
+    "sonner": "^1.5.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
