--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "nodemon": "^3.1.4",
     "otp-generator": "^4.0.1",
     "path": "^0.12.7",
-    "speakeasy": "^2.0.0"
+    "speakeasy": "^2.0.0",
+    "tesseract.js": "^5.1.1"
   }
 }
